Quick, untested, reference spike implementation

--- a/src/app/color/color.component.html
+++ b/src/app/color/color.component.html
@@ -1,5 +1,6 @@
 <div class='color-content'
-     [class.black]='isZero()'
-     [class.red]='isOdd()'
-     [class.blue]='isEven()'
-     [class.yellow]='isPrime()'></div>
+     *ngIf='countState$ | async; let countState'
+     [class.black]='isZero(countState.count)'
+     [class.red]='isOdd(countState.count)'
+     [class.blue]='isEven(countState.count)'
+     [class.yellow]='isPrime(countState.count)'></div>
